Migrate backend config to env-var secrets, add IT Solutions portfolio/hero, fix mockup crop
Moves DB/JWT/CORS config off hardcoded values in application.yml onto
env-var-backed application.properties, and adds the parallax hero/portfolio
sections, film-reel homepage intro, and 3D arm scene to the frontend.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>